--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -1258,6 +1258,9 @@ on property:persist.security.deny_new_usb=dynamic
 on property:security.deny_new_usb=*
     write /proc/sys/kernel/deny_new_usb ${security.deny_new_usb}
 
+on property:security.deny_new_usb2=*
+    write /proc/sys/kernel/deny_new_usb2 ${security.deny_new_usb2}
+
 # perf_event_open syscall security:
 # Newer kernels have the ability to control the use of the syscall via SELinux
 # hooks. init tests for this, and sets sys_init.perf_lsm_hooks to 1 if the
